--- a/html/Warenkorb.html
+++ b/html/Warenkorb.html
@@ -35,60 +35,67 @@
         dataType: "json"
       }).done(function(response) {
         var tmp = '';
-        tmp += '<table>';
-        tmp += '<tr>';
-        tmp += '<th>Artikel</th>';
-        tmp += '<th>Menge</th>';
-        tmp += '<th>Stückpreis</th>';
-        tmp += '<th>Mengenpreis</th>';
-        tmp += '</tr>';
-
-        for (i = 0; i < response.daten.length; i++) {
+        if (response.daten.length == 0) { //Bin is empty
+          tmp += '<h2>Warenkorb ist leer</h2>';
+        } else {
+          tmp += '<table>';
           tmp += '<tr>';
-          tmp += '<td><a href="produktdetail.html?produkt=' + response.daten[i].produkt.id + '" style="color: black;">' + response.daten[i].produkt.name + '</a></td>';
-          tmp += '<td><input id="Input' + response.daten[i].produkt.id + '" step="1" data-step-max="10" type="number" value="' + response.daten[i].menge +
-            '" data-decimals="0" min="0" max="360" class="col-3" /><button class="buttonchange" onclick="Change(' + response.daten[i].produkt.id + ')">Menge ändern</button></td>';
-          tmp += '<td>' + response.daten[i].produkt.bruttopreis.toString().replace(".", ",") + ' €</td>';
-          tmp += '<td>' + Number(response.daten[i].produkt.bruttopreis * response.daten[i].menge).toFixed(2).toString().replace(".", ",") + ' €</td>';
-          tmp += '<td><button class="button">X</button></td>';
+          tmp += '<th>Artikel</th>';
+          tmp += '<th>Menge</th>';
+          tmp += '<th>Stückpreis</th>';
+          tmp += '<th>Mengenpreis</th>';
           tmp += '</tr>';
 
+          for (i = 0; i < response.daten.length; i++) {
+            tmp += '<tr>';
+            tmp += '<td><a href="produktdetail.html?produkt=' + response.daten[i].produkt.id + '" style="color: black;">' + response.daten[i].produkt.name + '</a></td>';
+            tmp += '<td><input id="Input' + response.daten[i].produkt.id + '" step="1" data-step-max="10" type="number" value="' + response.daten[i].menge +
+              '" data-decimals="0" min="1" max="360" class="col-3" /><button class="buttonchange" onclick="Change(' + response.daten[i].produkt.id + ')">Menge ändern</button></td>';
+            tmp += '<td>' + response.daten[i].produkt.bruttopreis.toString().replace(".", ",") + ' €</td>';
+            tmp += '<td>' + Number(response.daten[i].produkt.bruttopreis * response.daten[i].menge).toFixed(2).toString().replace(".", ",") + ' €</td>';
+            tmp += '<td><button onclick="DeleteItem(' + response.daten[i].produkt.id + ')" class="button">X</button></td>';
+            tmp += '</tr>';
 
-        } // end for
+
+          } // end for
 
 
 
-        var Gesamtkosten = 0;
-        var gesamtMWST = 0;
-        for (i = 0; i < response.daten.length; i++) {
-          Gesamtkosten = Gesamtkosten + (response.daten[i].produkt.bruttopreis * response.daten[i].menge);
-          gesamtMWST = gesamtMWST + (response.daten[i].produkt.mehrwertsteueranteil * response.daten[i].menge);
+          var Gesamtkosten = 0;
+          var gesamtMWST = 0;
+          for (i = 0; i < response.daten.length; i++) {
+            Gesamtkosten = Gesamtkosten + (response.daten[i].produkt.bruttopreis * response.daten[i].menge);
+            gesamtMWST = gesamtMWST + (response.daten[i].produkt.mehrwertsteueranteil * response.daten[i].menge);
+          }
+          tmp += '<tr></tr>';
+          tmp += '<tr>';
+          tmp += '<td></td>';
+          tmp += '<td></td>';
+          tmp += '<td>inkl. 19% MwSt.</td>';
+          tmp += '<td>' + Number(gesamtMWST).toFixed(2).toString().replace(".", ",") + '€</td>';
+          tmp += '</tr>';
+          tmp += '<tr>';
+          tmp += '<td>Gesamtkosten:</td>';
+          tmp += '<td></td>';
+          tmp += '<td></td>';
+          tmp += '<td>' + Number(Gesamtkosten).toFixed(2).toString().replace(".", ",") + ' €</td>';
+          tmp += '<td></td>';
+          tmp += '</tr>';
+          tmp += '<tr>';
+          tmp += '<td valigin:center></td>';
+          tmp += '<td></td>';
+          tmp += '<td></td>';
+          tmp += '<td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>';
+          tmp += '<td></td>';
+          tmp += '</tr>';
+          tmp += '</div>';
+          tmp += '</table>';
+
+
+
+
+
         }
-        tmp += '<tr></tr>';
-        tmp += '<tr>';
-        tmp += '<td></td>';
-        tmp += '<td></td>';
-        tmp += '<td>inkl. 19% MwSt.</td>';
-        tmp += '<td>' + Number(gesamtMWST).toFixed(2).toString().replace(".", ",") + '€</td>';
-        tmp += '</tr>';
-        tmp += '<tr>';
-        tmp += '<td>Gesamtkosten:</td>';
-        tmp += '<td></td>';
-        tmp += '<td></td>';
-        tmp += '<td>' + Number(Gesamtkosten).toFixed(2).toString().replace(".", ",") + ' €</td>';
-        tmp += '<td></td>';
-        tmp += '</tr>';
-        tmp += '<tr>';
-        tmp += '<td valigin:center></td>';
-        tmp += '<td></td>';
-        tmp += '<td></td>';
-        tmp += '<td><a href="order_process.html"><button>Weiter zur </br>Bestellung</button></a></td>';
-        tmp += '<td></td>';
-        tmp += '</tr>';
-        tmp += '</div>';
-        tmp += '</table>';
-
-
 
         $('#tabelle').html(tmp);
 
@@ -101,11 +108,9 @@
 
     }); //End document ready
 
-    function Change(id) { //function to post product into the bin or update already existing product in the bin
+    function Change(id) { //function to  update already existing product in the bin
       var Input = 'Input' + id + '';
       var Change = document.getElementById(Input).value;
-      console.log("Hallo");
-
 
       var obj = {
         "menge": Change,
@@ -127,8 +132,24 @@
       setTimeout(function() {
         window.location.reload(true);
       }, 500);
+    }
 
 
+    function DeleteItem(id) {
+      $.ajax({
+        url: "http://localhost:8000/api/bestellposition/" + id,
+        method: "delete",
+
+      }).done(function(response) {
+
+      }).fail(function(jqXHR, statusText, error) {
+        console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+        $("#output").html("Ein Fehler ist aufgetreten");
+      });
+
+      setTimeout(function() {
+        window.location.reload(true);
+      }, 500);
 
 
     }
