--- a/html/produktdetail.html
+++ b/html/produktdetail.html
@@ -106,11 +106,11 @@
 
         var input_button = ''; //2 different buttons, depending on the product is available or not --> Execute different functions on click!
         if (aufLager) {
-          input_button = 'Stückzahl:<br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /><br>';
-          input_button += '<br><button id="addProduct" onclick="Input()">In den</br>Warenkorb</button>';
+          input_button = 'Stückzahl:<br><input id="userInput" step="1" data-step-max="10" type="number" value="1" data-decimals="0" min="1" max="360" class="col-3" /><br>';
+          input_button += '<br><button onclick="Input()">In den</br>Warenkorb</button>';
         } else {
-          input_button = 'Stückzahl:<br><input id="userInput" step="1" data-step-max="10" type="number" value="0" data-decimals="0" min="0" max="360" class="col-3" /><br>';
-          input_button += '<br><button id="addProduct" onclick="NotAvail()">In den</br>Warenkorb</button>';
+          input_button = 'Stückzahl:<br><input id="userInput" step="1" data-step-max="10" type="number" value="1" data-decimals="1" min="0" max="360" class="col-3" /><br>';
+          input_button += '<br><button onclick="NotAvail()">In den</br>Warenkorb</button>';
         }
 
 
@@ -133,29 +133,44 @@
 
       var Input = document.getElementById("userInput").value;
 
-      console.log(inBestellposition);
 
       if (inBestellposition) { //If Product already in the bin....
-
-        var obj = {
-          "menge": Input,
-          "produktid": urlParam
-        };
-
-        $.ajax({ //...Use PUT to modify the already existing product
-          url: "http://localhost:8000/api/bestellposition",
-          method: "put",
-          contentType: "application/json",
-          data: JSON.stringify(obj)
+        var x = 0;
+        $.ajax({
+          url: "http://localhost:8000/api/bestellposition/gib/" + urlParam,
+          method: "get",
+          dataType: "json"
         }).done(function(response) {
+
+          sum = parseInt(Input, 10) + parseInt(response.daten.Menge, 10);
+
+          var obj = {
+            "menge": sum,
+            "produktid": urlParam
+          };
+
+          $.ajax({ //...Use PUT to modify the already existing product
+            url: "http://localhost:8000/api/bestellposition",
+            method: "put",
+            contentType: "application/json",
+            data: JSON.stringify(obj)
+          }).done(function(response) {
+
+          }).fail(function(jqXHR, statusText, error) {
+            console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
+            $("#output").html("Ein Fehler ist aufgetreten");
+          });
+
+          alert("Der Warenkorb wurde erfolgreich abgeändert!");
+          window.location.reload(true);
+
+
+
 
         }).fail(function(jqXHR, statusText, error) {
           console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
-          $("#output").html("Ein Fehler ist aufgetreten");
+          alert("Ein Fehler ist aufgetreten");
         });
-
-        alert("Der Warenkorb wurde erfolgreich abgeändert!");
-        window.location.reload(true);
 
 
       } else { //product not yet in the bin
