--- a/html/order_process.html
+++ b/html/order_process.html
@@ -3,135 +3,183 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Bestellprozess</title>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Bestellprozess</title>
 
-    <link rel="stylesheet" href="../css/bootstrap.css">
-    <link rel="stylesheet" href="../css/Stylesheet.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
-
-
-    <script>
-        function myFunction() {
-
-            if (document.getElementById('slide1').checked) {
-                document.getElementById('myLink').href = "order_confirm_uber.html";
-            }
-            if (document.getElementById('slide3').checked) {
-                document.getElementById('myLink').href = "order_confirm_Rech.html";
-            }
-            if (document.getElementById('slide2').checked) {
-                document.getElementById('myLink').href = "order_confirm.html";
-            }
-        }
-    </script>
-
-
-
+  <link rel="stylesheet" href="../css/bootstrap.css">
+  <link rel="stylesheet" href="../css/Stylesheet.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/navi_footer_orderprocess.js"></script>
 
 </head>
 
 <body>
-    <div class="pointer">
-        <div class="logo" onclick="window.location.href='start.html'">
-            <img src="../img/DeluxeCar.png" />
+  <div class="container">
+    <form>
+
+      <div class="Anrede">
+        <div class="form-group col-md-4">
+          <label for="Anrede">Anrede:</label>
+          <select name="Anrede" id="Anrede">
+            <option value="Herr">Herr</option>
+            <option value="Frau">Frau</option>
+            <option value="Divers">Divers</option>
+          </select>
         </div>
-    </div>
-    <nav>
 
-        <ul>
-            <li><a class="navi" href="start.html">Startseite</a></li>
-            <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-            <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-            <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-            <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-        </ul>
-    </nav>
-    <div class="container">
-        <form action="order_confirm.html">
+        <div class="col-md-8">
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="Vorname">Vorname:</label>
+              <input id="Vorname" class="form-control full-width">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="Nachname">Nachname:</label>
+              <input id="Nachname" class="form-control full-width">
+            </div>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="Straße">Straße:</label>
+              <input id="Straße" class="form-control full-width">
+            </div>
+            <div class="form-group col-md-6">
+              <label for="Hausnummer">Hausnummer:</label>
+              <input id="Hausnummer" class="form-control full-width">
+            </div>
+          </div>
 
-            <div class="Anrede">
-                <div class="form-group col-md-4">
-                    <label for="Anrede">Anrede:</label>
-                    <select name="Anrede" id="cars">
-                        <option value="Herr">Herr</option>
-                        <option value="Frau">Frau</option>
-                        <option value="Divers">Divers</option>
-                    </select>
-                </div>
+          <div class="form-row">
+            <div class="form-group col-md-6">
+              <label for="PLZ">PLZ:</label>
+              <input id="PLZ" class="form-control full-width">
+            </div>
 
-                <div class="col-md-8">
-
-
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="Vorname">Vorname:</label>
-                            <input id="Vorname" class="form-control full-width">
-                        </div>
-
-                        <div class="form-group col-md-6">
-                            <label for="Nachname">Nachname:</label>
-                            <input id="Nachname" class="form-control full-width">
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="Straße">Straße:</label>
-                            <input id="Straße" class="form-control full-width">
-                        </div>
-
-                        <div class="form-group col-md-6">
-                            <label for="Hausnummer">Hausnummer:</label>
-                            <input id="Hausnummer" class="form-control full-width">
-                        </div>
-                    </div>
-
-                    <div class="form-row">
-                        <div class="form-group col-md-6">
-                            <label for="PLZ">PLZ:</label>
-                            <input id="PLZ" class="form-control full-width">
-                        </div>
-
-                        <div class="form-group col-md-6">
-                            <label for="Ort">Ort:</label>
-                            <input id="Ort" class="form-control full-width">
-                        </div>
-                    </div>
+            <div class="form-group col-md-6">
+              <label for="Ort">Ort:</label>
+              <input id="Ort" class="form-control full-width">
+            </div>
+          </div>
 
 
-                    <div class="test">
+          <div class="test">
 
-                        <p>Geben Sie Ihre Zahlungsweise an:</p>
+            <p>Geben Sie Ihre Zahlungsweise an:</p>
 
-                        <input type="radio" name="slider" id="slide2">
-                        <label for="mc"> Paypal</label><br />
-                        <input checked="" type="radio" name="slider" id="slide1">
-                        <label for="vi"> Überweisung</label><br />
-                        <input type="radio" name="slider" id="slide3">
-                        <label for="ae"> Auf Rechnung</label>
-                    </div></br>
-                    <a href="order_confirm.html" onclick='myFunction()' style="float: right;" id="myLink"><img alt="Button" src="../img/Button.png" /></a>
+            <input type="radio" name="slider" id="slide2">
+            <label for="mc"> Paypal</label><br />
+            <input checked="" type="radio" name="slider" id="slide1">
+            <label for="vi"> Überweisung</label><br />
+            <input type="radio" name="slider" id="slide3">
+            <label for="ae"> Auf Rechnung</label>
+          </div></br>
+          <a onclick='SendData()' style="float: right;" id="myLink"><img alt="Button" src="../img/Button.png" /></a>
 
 
 
-        </form>
+    </form>
 
-    </div>
+  </div>
 
-    </div>
+  </div>
 
-    <!-- footer -->
+  <script>
+    $(document).ready(function() {
 
-    <div class="footer-basic-process">
-        <footer>
-            <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-        </footer>
-    </div>
+    }); //End document ready
+
+
+
+    function SendData() {
+
+      var fail = '';
+      var reg = /^[a-zA-Z]+(([',. -][a-zA-Z ])?[a-zA-Z]*)*$/; //Regex to check the Input
+
+      var getAnrede = document.getElementById("Anrede");
+      var Anrede = getAnrede.options[getAnrede.selectedIndex].value;
+      console.log(Anrede);
+
+      var Vorname = document.getElementById("Vorname").value;
+      if (reg.test(Vorname)) {
+      }else{
+        fail += '-Geben sie einen gültigen Vorname ein!\n';
+      }
+      console.log(Vorname);
+
+      var Nachname = document.getElementById("Nachname").value;
+      if (reg.test(Nachname)) {
+      }else{
+        fail += '-Geben sie einen gültigen Nachname ein!\n';
+      }
+      console.log(Nachname);
+
+      var Straße = document.getElementById("Straße").value;
+      if (reg.test(Straße)) {
+      }else{
+        fail += '-Geben sie eine gültige Straße ein!\n';
+      }
+      console.log(Straße);
+
+      var Hausnummer = document.getElementById("Hausnummer").value;
+      if (Hausnummer.toString().length>5 || isNaN(Hausnummer)) {
+        fail += '-Geben sie eine gültige Hausnummer ein!\n';
+      }
+      console.log(Hausnummer);
+
+      var PLzahl = document.getElementById("PLZ").value
+      console.log(PLzahl);
+
+      if (isNaN(PLzahl) || PLzahl.toString().length != 5) {
+        fail += '-Geben sie eine gültige PLZ ein!\n';
+      }
+
+      var Ort = document.getElementById("Ort").value;
+      if (reg.test(Ort)) {
+      }else{
+        fail += '-Geben sie einen gültigen Ort ein!\n';
+      }
+      console.log(Ort)
+
+      if (fail != '') {
+        alert(fail);
+
+      }
+
+
+      if (fail == '') {
+
+        //TODA SEND AJAX! AND Direct to next page
+
+
+        //VALUE FOR Fields RESETEN
+        /*document.getElementById("Vorname").value='';
+        document.getElementById("Nachname").value='';
+        document.getElementById("Straße").value='';
+        document.getElementById("Hausnummer").value='';
+        document.getElementById("PLZ").value='';
+        document.getElementById("Ort").value='';*/
+        if(document.getElementById('slide1').checked) {
+          document.getElementById('myLink').href = "order_confirm_uber.html";
+        }
+        if (document.getElementById('slide3').checked) {
+          document.getElementById('myLink').href = "order_confirm_Rech.html";
+        }
+        if (document.getElementById('slide2').checked) {
+          document.getElementById('myLink').href = "order_confirm.html";
+        }
+      }//End if
+
+
+
+
+
+
+    } //End SendData()
+  </script>
 
 
 </body>
