--- a/Frontend/html/Impressum.html
+++ b/Frontend/html/Impressum.html
@@ -14,24 +14,10 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+  <script src="../js/navi_footer.js"></script>
 </head>
 
 <body>
-  <div class="pointer">
-    <div class="logo" onclick="window.location.href='start.html'">
-      <img src="../img/DeluxeCar.png" />
-    </div>
-  </div>
-  <nav>
-    <ul>
-      <li><a class="navi" href="start.html">Startseite</a></li>
-      <li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-      <li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-      <li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-      <li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-    </ul>
-  </nav>
-
   <div style="margin-left:30px;">
     <p>
     <h1>Impressum</h1>
@@ -69,41 +55,6 @@
 
     </p>
   </div>
-
-  <!-- footer -->
-
-
-  <div class="footer-basic">
-    <footer>
-      <p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-    </footer>
-  </div>
 </body>
 
 </html>
-
-<!-- jquery functions to send the amound of requested Product to the server and the database -->
-
-
-<!--
-<script>
-
-$("#addProduct").click(function() {
-
-  var obj = {"id":1,"bezeichnung":"ALCLEAR Waschhandschuh","nettopreis":12.99, "kategorie":{"id":1}, "mehrwertsteuer":{"id":1}};
-
-  $.ajax({
-            url: "http://localhost:8000/api/produkt",
-            method: "post",
-    contentType: "application/json",
-    data: JSON.stringify(obj)
-        }).done(function (response) {
-            console.log(response);
-            $("#output").html(JSON.stringify(response));
-        }).fail(function (jqXHR, statusText, error) {
-            console.log("Response Code: " + jqXHR.status + " - Fehlermeldung: " + jqXHR.responseText);
-            $("#output").html("Ein Fehler ist aufgetreten");
-        });
-    });
-
-</script>
