--- a/Frontend/html/Kontakt.html
+++ b/Frontend/html/Kontakt.html
@@ -12,38 +12,16 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
+	<script src="../js/navi_footer.js"></script>
 </head>
 
 <body>
-	<div class="pointer">
-		<div class="logo" onclick="window.location.href='start.html'">
-			<img src="../img/DeluxeCar.png" />
-		</div>
-	</div>
-	<nav>
-
-		<ul>
-			<li><a class="navi" href="start.html">Startseite</a></li>
-			<li><a class="navi" href="Verkauf1.html">Handwäsche</a></li>
-			<li><a class="navi" href="Verkauf2.html">Polituren und Poliermaschinen</a></li>
-			<li><a class="navi" href="Verkauf3.html">Versiegelungen und Wachse</a></li>
-			<li><a class="navi" href="Warenkorb.html">Warenkorb</a></li>
-		</ul>
-	</nav>
 	<div style="margin-left:30px;margin-Top:25px">
 		<h1>Kontakt</h1>
 
 		<p>Falls sie Probleme mit ihrere Bestellung haben oder sonstige Anregungen bzgl. unserem Shop haben, zögern sie nicht uns unter folgender E-Mail zu kontaktieren!</p>
 		<a href="mailto:office@DeluxeCarCare.de">office@DeluxeCarCare.de</a>
 
-	</div>
-
-
-	<!-- footer -->
-	<div class="footer">
-		<footer>
-			<p>Marcus, Fabian, Leon, Caspar © 2020 Webanwendung2 <br> <a href="Impressum.html">Impressum</a> | <a href="Kontakt.html">Kontakt</a> </p>
-		</footer>
 	</div>
 </body>
 
